--- a/wp-content/themes/html5blank-master/test.html
+++ b/wp-content/themes/html5blank-master/test.html
@@ -30,30 +30,15 @@
         </script>
 
 	</head>
-	<body class="home logged-in">
-	<div class="block"><h1>
-	Acceuil
-	</h1>
-	</div>
-
-	<div class="block"><h1>
-	Actualités
-	</h1>
-	</div>
-
-	<div class="block"><h1>
-	Qui sommes-nous
-	</h1>
-	</div>
-
-	<div class="block"><h1>
-	Portfolio
-	</h1>
-	</div>
-
-	<div class="block"><h1>
-	Contactez-nous
-	</h1>
-	</div>
-	</body>
+<body class="home logged-in">
+	<table class="my_table">
+		<tr class="my_table">
+			<td class="my_table">Acceuil</td>
+			<td class="my_table">Actualités</td>
+			<td class="my_table">Qui sommes-nous</td>
+			<td class="my_table">Portfolio</td>
+			<td class="my_table">Contactez-nous</td>
+		</tr>
+	</table>
+</body>
 	
